[package]
name = "cargo-cats"
version = "0.1.13"
edition = "2021"
authors = ["CATS <Aurelien.Couthures@gmail.com>"]
description = "CATS's"
license = "MIT" # even if I don't know what it does
readme = "README.md"
repository = "https://github.com/CoAuToSe/cargo-cats"
homepage = "https://github.com/CoAuToSe/cargo-cats"
documentation = "https://docs.rs/cargo-cats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]


[features]
default = ["env-var", "build"]
nightly-features = []
env-var = []
build = []